fixes for hero on mobile

--- a/app/src/viewcontrols/home/home.vc.less
+++ b/app/src/viewcontrols/home/home.vc.less
@@ -53,12 +53,9 @@
             }
               .header-view .info {
                  padding: 2em 0;
-               h1 {
-                 margin-top: -1em;
-                }
                h3 {
                  width: 80%;
-                 margin: 4.5em auto;
+                 margin: 0 auto;
                  box-sizing: border-box;
                 } 
             }
@@ -70,7 +67,7 @@
             width: 20em;
             height: auto;
             padding-top: 0.4em;
-            max-width: 100%;
+            max-width: 95%;
         }
         #covers {
             width: 25em;
